--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,23 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+.gallery-item img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  display: block;
+  transition: transform 0.3s ease-in-out;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px 24px;
+  width: 1128px;
+  margin: 0 auto;
+}
+
+.gallery-item:hover img {
+  transform: scale(1.1);
+  cursor: pointer;
+}
