--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -36,3 +36,73 @@
   transform: scale(1.1);
   cursor: pointer;
 }
+
+
+.feedback-form {
+  display: flex;
+  flex-direction: column;
+  width: 360px;
+  gap: 8px;
+  margin: 0 auto;
+  
+}
+
+
+.feedback-form label {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+  align-items: flex-start;
+}
+
+.feedback-form input,
+.feedback-form textarea {
+  width: 100%;
+  height: 40px;
+  padding: 8px 16px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  font: inherit;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.feedback-form textarea {
+  height: 80px;
+}
+
+
+.feedback-form input:hover,
+.feedback-form textarea:hover {
+  border-color: #000000;
+}
+
+
+
+.feedback-form button {
+  display: block;
+  width: 95px;
+  height: 40px;
+  margin-top: 16px;
+  border: none;
+  border-radius: 8px;
+  background-color: #4e75ff;
+  color: #ffffff;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.feedback-form button:hover {
+  background-color: rgba(108, 140, 255, 1);
+}
